# GummyPix

./: 404.html  CMakeLists.txt  LICENSE.md  README.md  build.sh  extract_color_map.py  index.html  markdown-page.html  ressources.md  sitemap.xml  uninstall.sh
assets/css/: styles.bbdd0876.css
assets/js/: 0bc24d05.1448bbaa.js  0e384e19.3ef5a1a5.js  17896441.d1112fbb.js  1f391b9e.5058e31c.js  237.ae1672a2.js  393be207.3c55a70f.js  3b8c55ea.1b5a46e4.js  5e95c892.f1e1fa70.js  668.5b77ff2e.js  9f788d66.b249d439.js  a7456010.2c2d6df9.js  a7bd4aaa.bf339957.js  (+5 more)
color_maps/: Accent.gummycm  Accent_r.gummycm  Blues.gummycm  Blues_r.gummycm  BrBG.gummycm  BrBG_r.gummycm  BuGn.gummycm  BuGn_r.gummycm  BuPu.gummycm  BuPu_r.gummycm  CMRmap.gummycm  CMRmap_r.gummycm  Dark2.gummycm  Dark2_r.gummycm  GnBu.gummycm  GnBu_r.gummycm  Grays.gummycm  Greens.gummycm  Greens_r.gummycm  Greys_r.gummycm  OrRd.gummycm  OrRd_r.gummycm  Oranges.gummycm  Oranges_r.gummycm  PRGn.gummycm  PRGn_r.gummycm  Paired.gummycm  Paired_r.gummycm  Pastel1.gummycm  Pastel1_r.gummycm  Pastel2.gummycm  Pastel2_r.gummycm  PiYG.gummycm  PiYG_r.gummycm  PuBu.gummycm  PuBuGn.gummycm  PuBuGn_r.gummycm  PuBu_r.gummycm  PuOr.gummycm  PuOr_r.gummycm  (+118 more)
docs/: compilation.html  installation.html  intro.html
docs-gummypix/: docusaurus.config.js  package-lock.json  package.json  sidebars.js
example/: apply_colormap.c  calc_gradient.c  gaussian_filter.c  histogram_equalization.c
include/: GummyPix.h  color.h  fft.h  histogram.h  image.h  shape.h  utils.h  vector.h
src/: color.c  fft.c  histogram.c  image.c  shape.c
(+19 files in other folders)
